# soundboard-electron

./: .eslintrc.js  .gitignore  .gitmodules  CMakeLists.txt  README.md  binding.gyp  forge.config.js  package-lock.json  package.json  piano copy.json  tsconfig.json  webpack.main.config.js  webpack.plugins.js  webpack.renderer.config.js  webpack.rules.js
src/: theme.scss  typings.d.ts
src/backend/: audio_engine.cc  audio_engine.h  backend.cc  backend.d.ts  index.ts  main.cc  types.h  types.ts
src/backend/model/: audio_unit.h  channel_strip.h  parameter_value.h  session.h
src/backend/processing/: base_processor.h  equalizer.h  layered_sampler.cc  layered_sampler.h  layered_sampler_sound.cc  layered_sampler_sound.h  linked_float_parameter.h  mixer.cc  mixer.h  oscillator.cc  oscillator.h  output.h  piano.cc  piano.h  streaming_sample_loader.cc  streaming_sample_loader.h  streaming_sampler.h  streaming_sampler_sound.cc  streaming_sampler_sound.h  streaming_sampler_voice.cc  streaming_sampler_voice.h
src/backend/processing/sampler/: papagei_sampler.cc  papagei_sampler.h  papagei_sound.cc  papagei_sound.h  papagei_voice.cc  papagei_voice.h  sample_loader.cc  sample_loader.h
src/main/: index.ts
src/renderer/: App.scss  App.tsx  index.html  index.scss  index.tsx  preload.ts
src/renderer/components/: index.ts
src/renderer/components/AudioUnit/: AudioUnit.scss  AudioUnit.tsx  ControlContainer.scss  ControlContainer.tsx
src/renderer/components/AudioUnitPlaceholder/: AudioUnitPlaceholder.scss  AudioUnitPlaceholder.tsx
src/renderer/components/ChannelStrip/: ChannelStrip.scss  ChannelStrip.tsx  MenuButtons.scss  MenuButtons.tsx
src/renderer/components/MenuBar/: MenuBar.scss  MenuBar.tsx
src/renderer/components/UnitButton/: UnitButton.scss  UnitButton.tsx
src/renderer/components/UnitFader/: UnitFader.scss  UnitFader.tsx
src/renderer/components/UnitKnob/: UnitKnob.scss  UnitKnob.tsx
src/renderer/components/UnitLabel/: UnitLabel.scss  UnitLabel.tsx
src/renderer/store/: app.ts  index.ts
